--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
+* {
+  font-family: sans-serif;
+  text-align: center;
+  background-color: black;
+}
+
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  will-change: opacity;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
